welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: value update is not a member of Boolean
while (estFaceMur()=false){
       ^Runner:5: error: value update is not a member of Boolean
while (estFaceMur()=true){
       ^